Revert "GitWrapper implementation and GitTester testing"
This reverts commit 7dbc8a8d48a2e26ac69b46a6c671d679850b5f80.